tests/paczka1/fuzzy1/26653808.err
Error in line 3: S850 S240 98,0
Error in line 7: S850 S850 88,9
Error in line 23: RZU7RdTb6g S240 84,2
Error in line 27: Myf S850 -1,3
Error in line 26: RZU7RdTb6g A464 30,4
Error in line 8: rtS S240 21,1
Error in line 22: Myf S850 34,2
Error in line 24: UtLhr A464 8,2
Error in line 36: UtLhr S850 23,9
